--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -71,3 +71,6 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: UserBundle\Entity\User
+    registration:
+        form:
+            type: UserBundle\Form\Type\RegistrationType
