--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
 services:
-#    user.example:
-#        class: UserBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    app.form.registration:
+        class: UserBundle\Form\Type\RegistrationType
+        tags:
+            - { name: form.type, alias: app_user_registration }
