--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,6 +19,9 @@ security:
                 # if you are using Symfony < 2.8, use the following config instead:
                 # csrf_provider: form.csrf_provider
 
+                always_use_default_target_path: true
+                default_target_path: /
+
             logout:       true
             anonymous:    true
 
