--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,3 +74,9 @@ fos_user:
     registration:
         form:
             type: UserBundle\Form\Type\RegistrationType
+
+services:
+    twig.extension.intl:
+        class: Twig_Extensions_Extension_Intl
+        tags:
+            - { name: twig.extension }
