--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "twig/extensions": "1.0.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
